@startuml
abstract class SudokuGenerator {
   + {abstract} Sudoku generateSudoku(Difficulty difficulty)
   + SudokuArray getGameField(Sudoku sudoku)
}

class SudokuGeneratorTransformation {
    + Sudoku generateSudoku(Difficulty difficulty)
}

class SudokuGeneratorBacktracking {
    + Sudoku generateSudoku(Difficulty difficulty)
}


SudokuGeneratorTransformation --|> SudokuGenerator
SudokuGeneratorBacktracking --|> SudokuGenerator
@enduml
